Updating even more details

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h1>Where I'm From</h1>
       <p>Birmingham, UK</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>...</p>
+      <p>Gaming, listening to music, reading about fashion, exercising.</p>
       <h1>What's your dream job?</h1>
       <p>Web Developer or DevOps Engineer</p>
       <h1>Where do you live?</h1>
